# MusicPlayer

./: CMakeLists.txt  abstractrepository.h  accountmanager.cpp  accountmanager.h  accountrepository.cpp  accountrepository.h  album.cpp  album.h  albumrepository.cpp  albumrepository.h  artist.cpp  artist.h  artistmanager.cpp  artistmanager.h  artistrepository.cpp  artistrepository.h  artistwindow.cpp  artistwindow.h  artistwindow.ui  artistwindow.ui.autosave  dialog.cpp  dialog.h  dialog.ui  listener.cpp  listener.h  listenermanager.cpp  listenermanager.h  listenerwindow.cpp  listenerwindow.h  listenerwindow.ui  listenrrepository.cpp  listenrrepository.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playlist.cpp  playlist.h  playlistrepository.cpp  playlistrepository.h  (+8 more)
